# cyclic_pipe

./: Cargo.toml  README.md
src/: cyclic_pipe.rs  lib.rs
src/cyclic_pipe/: builder.rs  consumer.rs  producer.rs  token.rs
tests/: integration_tests.rs
